--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,7 @@ nvidia-nccl-cu12==2.18.1
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
 openai-whisper==20230124
+opencv-python==4.8.1.78
 orjson==3.9.10
 packaging==23.2
 pandas==2.1.3
@@ -86,6 +87,7 @@ pycparser==2.21
 pydantic==2.5.1
 pydantic_core==2.14.3
 pydub==0.25.1
+pyyaml==6.0.1
 Pygments==2.16.1
 pyopenjtalk-prebuilt==0.3.0
 pyparsing==3.1.1
