--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ MarkupSafe==2.1.3
 matplotlib==3.8.1
 matplotlib-inline==0.1.6
 more-itertools==10.1.0
+moviepy==1.0.3
 mpmath==1.3.0
 nest-asyncio==1.5.8
 networkx==3.2.1
