--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiofiles==23.2.1
 altair==5.1.2
 annotated-types==0.6.0
 anyio==3.7.1
+appdirs==1.4.4
 asttokens==2.4.1
 attrs==23.1.0
 certifi==2023.7.22
@@ -14,19 +15,24 @@ contourpy==1.2.0
 cycler==0.12.1
 Cython==3.0.5
 debugpy==1.8.0
-decorator==5.1.1
+decorator==4.4.2
 einops==0.7.0
 encodec==0.1.1
 eng-to-ipa==0.0.2
 exceptiongroup==1.1.3
 executing==2.0.1
 fastapi==0.104.1
+ffmpeg==1.4
+ffmpeg-downloader==0.2.0
 ffmpeg-python==0.2.0
 ffmpy==0.3.1
+ffprobe==0.5
+ffprobe-python==1.0.3
 filelock==3.13.1
 fonttools==4.44.3
 fsspec==2023.10.0
 future==0.18.3
+g2pk2==0.0.3
 gradio==3.41.2
 gradio_client==0.5.0
 h11==0.14.0
@@ -34,10 +40,13 @@ httpcore==1.0.2
 httpx==0.25.1
 huggingface-hub==0.19.4
 idna==3.4
+imageio==2.33.0
+imageio-ffmpeg==0.4.9
 importlib-resources==6.1.1
 inflect==7.0.0
 ipykernel==6.26.0
 ipython==8.17.2
+jamo==0.4.1
 jedi==0.19.1
 jieba==0.42.1
 Jinja2==3.1.2
@@ -80,6 +89,7 @@ pexpect==4.8.0
 Pillow==10.1.0
 platformdirs==4.0.0
 proces==0.1.7
+proglog==0.1.10
 prompt-toolkit==3.0.41
 psutil==5.9.6
 ptyprocess==0.7.0
@@ -88,12 +98,13 @@ pycparser==2.21
 pydantic==2.5.1
 pydantic_core==2.14.3
 pydub==0.25.1
-pyyaml==6.0.1
 Pygments==2.16.1
 pyopenjtalk-prebuilt==0.3.0
 pyparsing==3.1.1
 pypinyin==0.49.0
 python-dateutil==2.8.2
+python-mecab-ko==1.3.3
+python-mecab-ko-dic==2.1.1.post2
 python-multipart==0.0.6
 pytz==2023.3.post1
 PyYAML==6.0.1
