--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ filelock==3.13.1
 fonttools==4.44.3
 fsspec==2023.10.0
 future==0.18.3
+g2pK==0.9.4
 g2pk2==0.0.3
 gradio==3.41.2
 gradio_client==0.5.0
@@ -51,12 +52,15 @@ jedi==0.19.1
 jieba==0.42.1
 Jinja2==3.1.2
 joblib==1.3.2
+JPype1==1.4.1
 jsonschema==4.20.0
 jsonschema-specifications==2023.11.1
 jupyter_client==8.6.0
 jupyter_core==5.5.0
 kiwisolver==1.4.5
+konlpy==0.6.0
 langid==1.1.6
+lxml==4.9.3
 MarkupSafe==2.1.3
 matplotlib==3.8.1
 matplotlib-inline==0.1.6
