--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,26 @@
-soundfile
-numpy
-torch
+soundfile==0.12.1
+numpy==1.26.2
+torch==2.1.2
 torchvision
-torchaudio
-tokenizers
-encodec
-langid
+torchaudio==2.1.2
+tokenizers==0.15.0
+encodec==0.1.1
+langid==1.1.6
 wget
-unidecode
+Unidecode==1.3.7
 pyopenjtalk-prebuilt
 pypinyin
-inflect
-cn2an
-jieba
-eng_to_ipa
+inflect==7.0.0
+cn2an==0.5.22
+jieba==0.42.1
+eng-to-ipa==0.0.2
 openai-whisper
 matplotlib
 gradio==3.41.2
-nltk
-sudachipy
-sudachidict_core
-vocos
-g2pk
-moviepy
+nltk==3.8.1
+SudachiDict-core==20230927
+SudachiPy==0.6.8
+vocos==0.1.0
+g2pK==0.9.4
+moviepy==1.0.3
+whisper-timestamped==1.14.2
