noise separation & speech enhancement

--- a/requirements_backup.txt
+++ b/requirements_backup.txt
@@ -15,17 +15,12 @@ cn2an==0.5.22
 jieba==0.42.1
 eng-to-ipa==0.0.2
 openai-whisper
+matplotlib
 gradio==3.41.2
 nltk==3.8.1
 SudachiDict-core==20230927
 SudachiPy==0.6.8
-vocos==0.1.0
+vocos==0.1.0`
 g2pK==0.9.4
 moviepy==1.0.3
 whisper-timestamped==1.14.2
-librosa~=0.10.0
-matplotlib~=3.8.0
-opencv_python~=4.8.0
-resampy~=0.4.0
-tqdm~=4.66.0
-deepfilternet==0.5.6
